# eos

./: .gitignore  CMakeLists.txt  Cargo.toml  package.xml
apps/eos_drone/: drone_control.rs  drone_perception.rs
config/: eos_navigation.rviz  gazebo_world.sdf  params.yaml  ros_config.yaml
launch/: eos_simulation.launch.py
python/: ros_bridge.py  snn_model.py
scripts/: build.sh  neural_bridge.py  run_simulation.sh  setup.sh
src/: eos_ros_node.cpp  lib.rs  main.rs
src/core/: api.rs  localization.rs  memory.rs  mod.rs  perception.rs  state.rs
src/core/apps/eos_drone/: drone_navigation.rs
src/core/apps/eos_indoor/: indoor_control.rs  indoor_navigation.rs  indoor_perception.rs
src/core/apps/eos_rover/: rover_control.rs  rover_navigation.rs  rover_perception.rs
src/navigation/: controller.rs  mod.rs  planner.rs
src/neural/: config.rs  mod.rs  snn.rs
src/ros_interface/: mod.rs  publisher.rs  subscriber.rs
tests/: navigation_tests.rs  neural_tests.rs
worlds/: eos_test.world
