[package]
name = "eos"
version = "0.1.0"
description = "Eos: A neuromorphic robotics OS for adaptive navigation using spiking neural networks"
repo = "https://github.com/[Your GitHub Username]/eos-os"
readme = "README.md"
keywords = ["robotics", "neuromorphic", "os", "ai", "rust"]
categories =  ["science::robotics", "embedded"]
edition = "2024"
author = ["Mariam Khayr <mariamkhayr8@gmail.com>"]

[dependencies]
# r2r = { version = "0.8.0", features = ["ros2_humble"] } 
log = "0.4.21" 
env_logger = "0.10.2" 
serde = { version = "1.0.203", features = ["derive"] } 
serde_yaml = "0.9.34" 
nalgebra = "0.32.5" 

[dev-dependencies] 
rstest = "0.18.2" 
mockall = "0.12.1" 
[profile.release] 
opt-level = 3 
lto = true 
codegen-units = 1 
[profile.dev] 
opt-level = 1 
debug = true
